Update and rename iNaturalist_and_literature_data_and_analysis.Rmd to iNaturalist/iNaturalist_and_literature_data_and_analysis.Rmd

--- a/iNaturalist/iNaturalist_and_literature_data_and_analysis.Rmd
+++ b/iNaturalist/iNaturalist_and_literature_data_and_analysis.Rmd
@@ -226,7 +226,9 @@ plotobsandtotalobs <- ggplot(obs2@data, aes(x = normcount, y = totalobscount)) +
   #stat_smooth(method = "lm", col = "green") +
   labs(x = "% of total observations that are medically-important", 
          y = "Total spider (order Araneae) observations", 
-         title = "Medically-important spiders vs. total spiders per state")
+         title = "Medically-important spiders vs. total spiders per state") +
+        annotate("text", x = 20, y = 10000, label = "p = 0.582") +
+        annotate("text", x = 20, y = 6500, label = "mean(x) = 4.04")
 plotobsandtotalobs + scale_y_continuous(trans = 'log10')
 #table
 obsperstate_joined$normcount <- NA
