--- a/Twitter/Twitter_data_collection_and_analysis.Rmd
+++ b/Twitter/Twitter_data_collection_and_analysis.Rmd
@@ -679,8 +679,8 @@ ggplot(posnegtweets, aes(factor(type), count, fill = sentiment)) + geom_bar(stat
       labs(x = "Interaction",
       y = "Count",
       title = "Engagement of 1000 most positive vs. 1000 most negative spider tweets") +
-      annotate("text", x = 2, y = 7000, label = "likes: p = 5.76e-05, mean = 6.1415") +
-      annotate("text", x = 2, y = 6500, label = "retweets: p = 0.01828, mean = 0.6535")
+      annotate("text", x = 2, y = 7000, label = "likes: p = 5.76e-05, mean = 6.14") +
+      annotate("text", x = 2, y = 6500, label = "retweets: p = 0.02, mean = 0.65")
 #overall pos/neg string sentiment
 histogram <- ggplot(data=spider_tweets_sentiment@data, aes(spider_tweets_sentiment@data$stringsentiment)) +
                   geom_histogram() +
@@ -691,7 +691,7 @@ histogram <- ggplot(data=spider_tweets_sentiment@data, aes(spider_tweets_sentime
     geom_text(stat='count', aes(label=..count..), position = position_stack(vjust = 1.05),size=4) +
     scale_x_continuous(breaks = seq(-8,7,2)) +
     annotate("text", x = 5, y = 22500, label = "p = 2.2e-16") +
-    annotate("text", x = 5, y = 20500, label = "mean = -0.1422473")
+    annotate("text", x = 5, y = 20500, label = "mean = -0.14")
 histogram
 ```
 
@@ -757,6 +757,8 @@ spider_tweets_sentiment@data %>%
       labs(x = "Month",
       y = "Sentiment",
       title = "Sentiment of tweets by month in 2019")
+#export
+save_as_csv(spider_tweets_sentiment@data, here::here("data", "spiders06062020BIGsentiment.csv"), prepend_ids = TRUE, na = "", fileEncoding = "UTF-8")
 ```
 
 ```{r stats}
@@ -838,7 +840,7 @@ map_statesentiment <- ggplot(usa_basemap.df) +
          title = "Mean sentiment of spider tweets", 
          subtitle = "(January 1 2019-December 31 2019)") +
     annotate("text", x = -95.9, y = 25.3, size = 3, label = "Sentiment scale is from -1 to 1") +
-  coord_sf(crs = st_crs(WGS84_proj), xlim=c(-124.7, -67.1), ylim = c(25.2, 49.4)) +   annotation_north_arrow(style = north_arrow_fancy_orienteering, location = "tr", which_north = "true") + 
+  coord_sf(crs = st_crs(WGS84_proj), xlim=c(-124.7, -67.1), ylim = c(25.2, 49.4)) +   annotation_north_arrow(style = north_arrow_fancy_orienteering, location = "tr", which_north = "true") +
   scale_size_continuous(range = c(1, 8), breaks = c(250, 500, 750, 1000)) + 
   annotation_scale(location = "br", line_width = 0.5) + 
   theme(plot.title = element_text(hjust = 0.5), plot.subtitle = element_text(hjust = 0.5), legend.title = element_blank(), legend.background=element_blank()) + borders("state", colour = "gray80", fill = NA)
@@ -898,6 +900,6 @@ plottweetsandpop <- ggplot(tweetsandpop, aes(x = normcount, y = estpop)) +
          y = "Population", 
          title = "Spider-related tweets per state vs. state population") +
   annotate("text", x = 35, y = 3e+07, label = "p = 0.26") +
-  annotate("text", x = 35, y = 2e+07, label = "mean(x) = 12.829")
+  annotate("text", x = 35, y = 2e+07, label = "mean(x) = 12.83")
 plottweetsandpop + scale_y_continuous(trans = 'log10')
 ```
