--- a/Twitter/Twitter_data_collection_and_analysis.Rmd
+++ b/Twitter/Twitter_data_collection_and_analysis.Rmd
@@ -821,7 +821,9 @@ remove(spider_tweets_sentiment2)
 usa_basemap@data$statesentiment <- format(round(usa_basemap@data$statesentiment, 2), nsmall = 2)
 #group counts
 usa_basemap@data$statesentiment <- as.numeric(usa_basemap@data$statesentiment)
-usa_basemap@data$groups <- cut(usa_basemap@data$statesentiment, breaks=c(-0.5,-0.31,-0.21,-0.11,-0.01,0.10), labels=c("<-0.31","-0.3 - -0.21","-0.2 - -0.11","-0.1 - -0.01","0=<"))
+#get difference between overall mean sentiment and state mean sentiment
+usa_basemap@data$diffsentiment <- as.numeric(usa_basemap@data$statesentiment - (-0.14))
+usa_basemap@data$groups <- cut(usa_basemap@data$diffsentiment, breaks=c(-0.35, -0.20, -0.10, -0.01, 0, 0.10, 0.20, 0.29), labels=c("<-0.20","-0.20 - -0.11","-0.10 - -0.01","0","0.01 - 0.10","0.11 - 0.20", "0.20<"))
 #convert to df for ggplot
 usa_basemap.points = fortify(usa_basemap)
 knitr::opts_chunk$set(cache = TRUE, warning = FALSE,message = FALSE, cache.lazy = FALSE)
@@ -829,8 +831,9 @@ usa_basemap.df = inner_join(usa_basemap.points, usa_basemap@data, by="id")
 #aggregate
 #plot tweets with sentiment as polygons
 colors <- brewer.pal(7, "RdBu")
-colors <- colors[-7]
-map_statesentiment <- ggplot(usa_basemap.df) +  
+colors[4] <- "gray85"
+#mean sentiment
+map_meanstatesentiment <- ggplot(usa_basemap.df) +  
   aes(long, lat, group = group, fill = groups) + 
   geom_polygon() +
   theme_map() +
@@ -844,7 +847,23 @@ map_statesentiment <- ggplot(usa_basemap.df) +
   scale_size_continuous(range = c(1, 8), breaks = c(250, 500, 750, 1000)) + 
   annotation_scale(location = "br", line_width = 0.5) + 
   theme(plot.title = element_text(hjust = 0.5), plot.subtitle = element_text(hjust = 0.5), legend.title = element_blank(), legend.background=element_blank()) + borders("state", colour = "gray80", fill = NA)
-map_statesentiment
+map_meanstatesentiment
+#change between overall and state means
+map_meanchangesentiment <- ggplot(usa_basemap.df) + 
+  aes(long, lat, group = group, fill = groups) + 
+  geom_polygon() +
+  theme_map() +
+  scale_fill_manual(name = "Change", values=colors) +
+  labs(x = NULL, 
+         y = NULL, 
+         title = "Difference between overall mean and state mean sentiment of spider tweets", 
+         subtitle = "(January 1 2019-December 31 2019)") +
+    annotate("text", x = -95.9, y = 25.3, size = 3, label = "Sentiment scale is from -1 to 1") +
+  coord_sf(crs = st_crs(WGS84_proj), xlim=c(-124.7, -67.1), ylim = c(25.2, 49.4)) +   annotation_north_arrow(style = north_arrow_fancy_orienteering, location = "tr", which_north = "true") +
+  scale_size_continuous(range = c(1, 8), breaks = c(250, 500, 750, 1000)) + 
+  annotation_scale(location = "br", line_width = 0.5) + 
+  theme(plot.title = element_text(hjust = 0.5), plot.subtitle = element_text(hjust = 0.5), legend.background=element_blank()) + borders("state", colour = "gray80", fill = NA)
+map_meanchangesentiment
 ```
 
 ```{r normalize}
